--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,30 @@
-/* Created by: Mr. Coxall
-* Created on: Sep 2020
+/* Created by: Calista.E
+* Created on: Mar.2024
 * This file contains the CSS for index.html
 */
+
+.mdl-layout__header-row {
+  align-items: center;
+  justify-content: center;
+}
+
+.mdl-layout__content {
+  padding-left: 15pt;
+  padding-right: 15pt;
+  padding-top: 15pt;
+}
+
+body {
+  background-color: rgb(146, 30, 30);
+}
+
+p {
+  color: rgb(52, 132, 15);
+  padding-top: 5pt;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: x-large;
+}
+
+img {
+  float: right;
+}
